--- a/WEBTEKNOLOJİLERİPROJE/index.html
+++ b/WEBTEKNOLOJİLERİPROJE/index.html
@@ -36,11 +36,11 @@
             <a href="index.html" class="navbar-brand text-white">
                 Muhammed Kol
             </a>
-            <button class="navbar-toggler" type="button" onclick="toggleMenu()">
+            <button id="button" class="navbar-toggler" type="button" onclick="toggleMenu()">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
-				<ul class="navbar-nav ml-auto ">
+				<ul class="navbar-nav ml-auto">
 
 					<li class="nav-item active">
 						<a href="index.html" class="nav-link text-white">
@@ -58,12 +58,12 @@
 	      				</a></li>	
 
 					<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="sehrim.html" class="nav-link text-white">
 	      				Şehrim
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="takımımız.html" class="nav-link text-white">
 	      				Takımımız
 	      				</a></li>
 
@@ -86,20 +86,21 @@
         <div class="bg-secondary text-light jumbotron">
             <div class="container">
                 <div class="row">
-                <div class="col-12 col-md-9">
+                <div class="col-md-9">
                     <br>
-                    <h1 class="display-2 font-weight-bold">
+                    <h1 class="display-4 font-weight-bold">
                         HOŞGELDİNİZ
                         <br>
                     </h1>
                     <p class="lead my-3">
-                        Bu web sitesi Sakarya Üniversitesi öğrencisi Muhammed Kol tarafından bir proje ödevi gerekçesiyle tasarlanmıştır...
+                        <br>
+                        <i>Bu web sitesi Sakarya Üniversitesi öğrencisi Muhammed Kol tarafından bir proje ödevi gerekçesiyle tasarlanmıştır...</i>
 						<br><br><br>
-						Not: Bu yaptığı ilk sitedir :)
+						<i>Not: Bu yaptığı ilk sitedir :)</i>
                     </p>
                 </div>
                 <div class="row">
-                    <div class="col-6 col-md-4">
+                    <div class="col-md-4">
                         <img class="align-items-center rounded" src="yakısıklı.jpg" height="300" >
                     </div>
                 </div>
