--- a/WEBTEKNOLOJİLERİPROJE/atatürkevi.html
+++ b/WEBTEKNOLOJİLERİPROJE/atatürkevi.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>Atatürkevi | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
@@ -95,9 +95,11 @@
                     <img class="rounded mx-auto d-block" src="atatürkköşkü.jpg" width=100%>
                     <br>
                     <p><i>
-                        Atatürk Evi yazlık bir köşk olarak yapılmış dönemin tüm şatafatını taşıyan bir ev. Atatürk burada kaldığı
-                        için Atatürk Evi adı verilmiş, Atatürk burada mal varlığını Türk halkına bağışladığını belirten
-                        vaziyetnamesini kaleme almış. Güzel bir bahçesi de olan köşk müzeye çevrilmiş.
+                        Avrupa ve Batı Rönesans mimarisinin etkilerini taşıyan ve gösterişli Avrupa simgeleri kullanılan bina, 19. yüzyıl başlarında Trabzon'a hâkim Soğuksu sırtlarında Konstantin Kabayanidis tarafından yazlık ev olarak yaptırılmıştır. Köşkün giriş katında oturma odası, dinlenme odası, yemek odası ve misafir odası bulunmaktadır. Birinci katta çalışma odası, büyük yatak odası, bekleme odası ve toplantı odası vardır. İkinci katta ise iki küçük oda mevcuttur.  
+                        <br><br>
+                        Atatürk, 1924 yılında Trabzon'a ilk ziyaretini gerçekleştirdiğinde bu köşkte ağırlanmış ancak konaklamamıştır. İkinci kez Kasım 1930'da Trabzon'u tekrar onurlandırdığında köşkte ağırlanmış ve çok memnun kalmıştır. Haziran 1937'de kendisi için düzenlenen köşkte iki gece kalmış ve 11 Haziran gecesi bu köşkte bütün mal varlığını, canından çok sevdiği Türk ulusuna armağan etme kararı almış ve mal varlığının bir listesini hazırlayarak gereğinin yapılması için başbakana göndermiştir. Atatürk Trabzon'daki köşkten mal varlığını milletine adarken şöyle demiştir: "Mal ve mülk bana ağırlık veriyor. Bunları milletime bağışlamakla ferahlık duyacağım. İnsanın serveti kendi manevi kişiliğinde olmalıdır. Ben büyük milletime daha çok şeyler vermek istiyorum."
+                        <br><br>
+                        Atatürk Köşkü olarak anılan bu bina 1943 yılında müzeye dönüştürülerek hizmete açılmıştır.
                     </i></p>
                 </div>
             </div>
@@ -106,12 +108,7 @@
             </div>
             </div>
         </div>
-
-
-
-
-
-
+        
         <div class="bg-secondary text-light jumbotron">
         </div>
     </header>
