--- a/WEBTEKNOLOJİLERİPROJE/ayasofya.html
+++ b/WEBTEKNOLOJİLERİPROJE/ayasofya.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>Ayasofya | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
@@ -95,10 +95,14 @@
                     <img class="rounded mx-auto d-block" src="ayasofya.jpg" width=100%>
                     <br>
                     <p><i>
-                        Trabzon’un simge yapılarından birisi de şehir merkezindeki Aya Sofya Müzesi.1250-12560 yılları arasında 
-                        kilise olarak inşa edilen Ayasofya, yüksek yuvarlak kubbeleriyle dikkat çekiyor. Burası müze olarak
-                        ziyaret edilebilir.
-                    </i></p>
+                        Ayasofya Cami 28 Haziran 2013 Cuma günü vakit namazının kılınmasıyla, 52 yıl sonra yeniden Müslümanların ibadetine açılmıştır .Bugün cami olan Trabzon Ayasofya Müzesi, Trabzon İmparatorluğu krallarından 1. Manuel Komnenos zamanında (1238-1263) inşa edilmiştir. 1427 yılına tarihlenen çan kulesi kilisesinin batısında yer almaktadır. Kilisenin
+                        kuzeyinde bulunan üç apsisli şapel kalıntısı ise daha erken bir döneme aittir. Fatih Sultan Mehmet'in Trabzon'u fethini takiben yapı, camiye çevrilmiş ve vakıf eser olmuştur. Ayasofya, yüzyıllar boyunca şehri ziyarete gelen seyyah ve araştırmacıların ilgisini çekmiştir. I. Dünya Savaşı yıllarında sırasıyla depo, hastane daha sonraları yine cami olarak
+                        kullanılmıştır. 1958-1962 yılları arasında Vakıflar Genel Müdürlüğü ve Edinburg Üniversitesi’nin işbirliği ile restore edilerek 1964 yılından sonra müze olarak ziyarete açılmıştır. Geç Bizans kiliselerinin güzel bir örneği olan yapı, kare haç planlıdır ve yüksek bir merkezi kubbeye sahiptir. Nartex denilen giriş holüne sahip olan bina üç neflidir. Neflerden
+                        ortadaki beş köşeli, yanlardakiler ise yuvarlak bir apsisle son bulmaktadır. Nartex'in üzerinde şapel vardır. Yapının kuzey, batı ve güneyin de üç revaklı giriş bulunmaktadır. Kuzey ve batıdaki revak cephelerinde görülen geometrik geçmeli bezemeleri içeren madalyonlarla, batı cephesinde görülen mukarnaslı nişler Selçuklu taş işlemelerindeki
+                        özellikleri taşımaktadır. Binanın en görkemli cephesi güneyidir. Önemli bir taş işçiliğine sahip olan bölümde, Adem'le Havva'nın yaratılışı kabartma olarak bir friz halinde anlatılmıştır. Yapının ana kubbesinin altına rastlayan kısmında opussectile tarzında çok renkli mermerden yapılmış bir yer mozayiği bulunmaktadır. Ayasofya'nın süslemelerinin
+                        önemli bölümünü meydana getiren fresklerde İncil'den alınmış konular canlandırılmıştır: Kubbede ana tasvir Hz. İsa'nın tanrısal yönünü aksettiren pantacrator İsa'dır. Bunun altında bir kitabe kuşağı, daha altta ise melekler frizi bulunur. Pencere aralarında oniki havari tasvir edilmiştir. Pandantiflerde değişik kompozisyonlar yer almaktadır. İsa'nın
+                        doğumu, vaftizi, çarmıha gerilişi, kıyamet günü gibi sahneler betimlenmiştir. Binanın arka kemerleri üzerindeki dairesel madalyonlarda portrelere yer verilmiştir. Yapının tonozlarında da İncil'den alınmış dini sahneler canlandırılmıştır. 
+                    </i></p><br>
                 </div>
             </div>
             <div class="col-md text-center">
