--- a/WEBTEKNOLOJİLERİPROJE/git-login.html
+++ b/WEBTEKNOLOJİLERİPROJE/git-login.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Özgeçmiş | Muhammed Kol</title>
+    <title>Başarılı | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -52,7 +52,7 @@
 	      				Hakkında
 	      				</a></li>
 
-	      			<li class="nav-item active">
+	      			<li class="nav-item">
 						<a href="ozgecmis.html" class="nav-link text-white">
 	      				Özgeçmiş
 	      				</a></li>	
@@ -67,7 +67,7 @@
 	      				Takımımız
 	      				</a></li>
 
-	      			<li class="nav-item">
+	      			<li class="nav-item active">
 						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
@@ -86,46 +86,36 @@
         <div class="bg-secondary text-light jumbotron">
             <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-12">
                     <br>
                     <h1 class="display-4 font-weight-bold">
-                        ÖZGEÇMİŞ
+                        GİRİŞ BAŞARILI!
                     </h1>
                     <br>
+                    <p class="lead"><i>
+                        Hoşgeldiniz Sayın <span id="username"></span><br><br>
+                        Anasayfaya gidebilirsiniz.
+                        <a href="index.html" class="nav-link"><i>Anasayfaya git...</i></a>
+                    </i></p>
+                    <script>
+                        function getParameterByName(name, url = window.location.href) {
+                            name = name.replace(/[\[\]]/g, '\\$&');
+                            let regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)');
+                            let results = regex.exec(url);
+                            if (!results) return null;
+                            if (!results[2]) return '';
+                            return decodeURIComponent(results[2].replace(/\+/g, ' '));
+                        }
+                        document.getElementById('username').textContent = getParameterByName('username');
+                    </script>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8">
-                    <p class="font-weight-bold">Şubat-Kasım 2023</p><p class="font-italic">Bim A.Ş.</p><hr>
-                    <p class="font-weight-bold">2022-Güncel</p><p class="font-italic">Sakarya Üniversitesi Bilgisayar Mühendisliği</p><hr>
-                    <p class="font-weight-bold">2018-2022</p><p class="font-italic">Sakarya Cevat Ayhan Fen Lisesi</p><hr>
-                    <p class="font-weight-bold">2010-2018</p><p class="font-italic">Kurtuluş İlk-Ortaokulu</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="align-items-center rounded" src="yakısıklı4.jpg" height="380" >
-                </div>
             </div>
-            <br>
-            <hr>
-            <br>
-            <div>
-                <p class="font-weight-bold">Beceriler</p><br>
-                <p class="font-italic">C++ ve C# : Çıtırından</p><hr><br>
-                <p class="font-italic">Html : Başlangıç-orta</p><hr><br>
-                <p class="font-italic">Karate : Siyah kuşak</p><hr>
-            </div>
-            <div class="row">
-                    <img class="img-fluid rounded mx-auto d-block" src="saü.jpg" width="100%" alt="Responsive image">
-            </div>
-            <p class="text-center"><i>Sakarya Üniversitesi, Sakarya</i></p>
 
-            <br>
-        </div>
-        </div>
-        <div class="bg-secondary text-light jumbotron">
         </div>
     </header>
-    <footer class="py-5 bg-secondary text-white text-center fixed-bottom">
+
+<footer class="py-5 bg-secondary text-white text-center fixed-bottom">
         Web Teknolojileri Projesi © Muhammed Emin Kol 2024
     </footer>
 </body>
