--- a/WEBTEKNOLOJİLERİPROJE/gulbahar.html
+++ b/WEBTEKNOLOJİLERİPROJE/gulbahar.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>Gülbahar | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
@@ -94,8 +94,13 @@
                     <br>
                     <img class="rounded mx-auto d-block" src="gulbaharhatun.jpg" width=100%>
                     <br>
-                    <p><i>
-                        Yavuz Sultan Selim’in annesi Gülbahar Sultan anısına yaptırdığı türbe. Sekiz köşeli türbe taş işçiliğiyle yapılmış.
+                    <p><i> 
+                        Hatuniye Külliyesi’nde yer alan yapılardan Gülbahar Hatun Camii dışında günümüze ulaşan tek eserdir. Yapı, Hicri 911 (Miladi 1505/1506) tarihinde Yavuz Sultan Selim tarafından annesi Gülbahar Hatun için inşa ettirilmiştir.
+                        Yapı, Atapark’ın güneyinde, Gülbahar Hatun Camii’nin doğusunda yer almaktadır. Osmanlı hanedan türbesi olan yapı, anıtsal bir görünüme sahiptir. Türbe, kesme taş malzeme ile yığma sistemde inşa edilmiştir.
+                        Sekizgen planlı yapının üzeri sekizgen bir kasnak üzerine oturtulmuş sivri kubbe ile örtülüdür. Üst örtü malzemesi kurşundur. Saçak ve kubbe etekleri yivli ve kademelidir. Yapının girişi kuzeybatı cephesinde yer almaktadır. Giriş,
+                        sivri kemerli niş içinde yer alan basık kemerli açıklıktan sağlanmaktadır. Girişin üstünde iki bölüm ve dört satır şeklinde yazılmış olan kitabesi yer almaktadır. Giriş kapısının yer aldığı nişin köşelerinde sütunçeler yer
+                        almaktadır. Sivri kemerin tepesi ile yanlarına birer rozet bulunmaktadır. Yapının dört cephesinde sivri kemer çerçeveli, demir korkuluklu ve dikdörtgen formlu pencereler yer almaktadır. Ahşap pencereleri çift
+                        kanatlıdır. Cephelerde pencerelerin üzerinde yer alan panolarda geometrik ve bitkisel motifler ile yazılar yer almaktadır. Yazılı kaynaklara göre iç mekânda kalem işi süslemeler bulunmaktadır.
                     </i></p>
                 </div>
             </div>
