--- a/WEBTEKNOLOJİLERİPROJE/hakkında.html
+++ b/WEBTEKNOLOJİLERİPROJE/hakkında.html
@@ -174,13 +174,13 @@ function displayMovieDetails(movieData) {
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
