--- a/WEBTEKNOLOJİLERİPROJE/sumela.html
+++ b/WEBTEKNOLOJİLERİPROJE/sumela.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>Sümela | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
@@ -94,10 +94,32 @@
                     <br>
                     <img class="rounded mx-auto d-block" src="sumela.jpg" width=100%>
                     <br>
+                    <p class="font-weight-bold">Sümela Manastırı (Meryem Ana) Manastırı Nerededir?</p><br>
                     <p><i>
-                        Maçka'da çok yüksek bir tepeye inşa edilen Sümela Manastırı kentin simge eserlerinden birisi. Binlerce yıl
-                        önce böyle bir tepeye dönemin zor koşullarında inşa edilmiş olması manastırın değerini arttırıyor. 365-395
-                        yılları arasında inşa edilmiş Manastır Maçka ilçesinde yer alıyor. Burası müze olarak ziyaret edilebilir.
+                        Trabzon’un Maçka İlçesi'nin Altındere Köyü sınırları içinde, Altındere vadisine hakim Karadağ’ın eteklerinde sarp bir kayalık üzerine kurulmuş olan Sümela Manastırı, halk arasında "Meryem Ana" adı ile anılır. Vadiden yaklaşık 300 metre yükseklikte bulunan yapı, bu konumuyla manastırların şehir dışında, ormanlarda, mağara ve su kenarlarında kurulma geleneğini sürdürmüştür. 
+                        <br><br>
+                        Meryem Ana adına kurulan manastırın "Sümela" adını "siyah" anlamına gelen "melas" sözcüğünden aldığı söylenmektedir. Bu ismin manastırın kurulduğu koyu renkli Karadağlar’ dan geldiği düşünülmekte ise de Sümela kelimesi buradaki Meryem tasvirinin siyah rengine bağlanabilmektedir.
+                        <br><br>
+                    </i></p><br>
+                    <p class="font-weight-bold">Sümela Manastırı'nın Tarihi</p><br>
+                    <p><i>
+                        Rivayete göre Bizans İmparatoru  I.Theodosius zamanında (375-395) Atina’dan gelen Barnabas ve Sophranios isimli iki rahip tarafından kurulmuş olan manastır, 6'ıncı yüzyılda İmparator Justinianus’un manastırın onarılarak genişletilmesini istemesi üzerine Generallerinden Belisarios tarafından tamir edilmiştir.
+                        <br><br>
+                        Sümela Manastırı’nın şimdiki durumuyla varlığını 13'üncü yüzyıldan itibaren sürdürdüğü bilinmektedir. 1204 tarihinde kurulan Trabzon Komnenosları Prensliği’nden  III. Alexios (1349-1390) zamanında manastırın önemi artmış ve fermanlarla gelir sağlanmıştır. III. Alexios’un oğlu III. Manuel ve sonraki prensler döneminde de Sümela yeni fermanlarla zenginleştirilmiştir.
+                        <br><br>
+                        Doğu Karadeniz kıyılarının Türk egemenliğine girmesini takiben Osmanlı Padişahları pek çok manastırda olduğu gibi Sumela’nın da haklarını korumuşlar, bazı imtiyazlar vermişlerdir.
+                        <br><br>
+                        Sümela Manastırı’nın 18. yüzyılda bir çok bölümü yenilenmiş, bazı duvarlar fresklerle süslenmiştir. 19. yüzyılda büyük binaların ilave edilmesiyle manastır muhteşem bir görünüm kazanmış, en zengin ve parlak dönemini yaşamıştır. 
+                        <br><br>
+                        Bu dönemde son şeklini alan manastır pek çok yabancı seyyahın ziyaret ettiği, yazılarına konu edilen bir yer haline gelmiştir. Trabzon’un 1916-1918 yılları arasındaki Rus işgali sırasında manastıra el konulmuş, 1923'den sonra tamamıyla boşaltılmıştır.
+                        <br><br>
+                        Sümela Manastırı’nın başlıca bölümleri; Ana kaya kilisesi, birkaç şapel, mutfak, öğrenci odaları, misafirhane, kütüphane ile kutsal ayazma’dır. Bu yapılar topluluğu oldukça geniş bir alan üzerine inşa edilmiştir. Manastırın girişinde su getirdiği anlaşılan büyük su kemeri yamaca yaslanmış durumdadır. Çok gözlü olan bu kemerin bugün büyük bölümü yıkılmıştır.
+                        <br><br>
+                        Dar uzun bir merdivenle manastırın ana girişine ulaşılmaktadır. Giriş kapısının yanında muhafız odaları bulunmaktadır. Buradan bir merdivenle iç avluya inilmektedir. Solda, manastırın esasını teşkil eden ve kilise haline getirilen mağaranın önünde çeşitli manastır binaları bulunmaktadır. Sağ tarafta kütüphane yer almaktadır. Yine sağda yamacın ön yüzünü kaplayan büyük balkonlu bölüm keşiş odaları ve misafir odaları olarak kullanılmıştır ve 1860 yılına tarihlenmektedir. Avlunun etrafındaki binalarda odalardaki dolapları, hücreleri, ocakları ile Türk sanatının etkileri de görülmektedir.
+                        <br><br>
+                        Manastırın ana ünitesini meydana getiren kaya kilisesinin ve ona bitişik şapelin iç ve dış duvarları fresklerle donatılmıştır. Kaya kilisesinin içinde avluya bakan duvarda III. Alexios dönemine ait fresklerin varlığı tespit edilmiştir. Şapeldeki freskler ise 18'inci yüzyılın başlarına tarihlenmektedir ve üç ayrı devirde yapılan üç tabaka görülmektedir. En alt tabakanın freskleri daha üstün niteliktedir.
+                        <br><br>
+                        Sümela Manastırı’nda yer yer sökülerek alınmış olan ve oldukça harap bir görünüm taşıyan fresklerde işlenen başlıca konular İncil’den alınmış sahneler, Hz. İsa ve Meryem Ana’nın hayatı ile ilgili tasvirlerdir.
                     </i></p>
                 </div>
             </div>
