--- a/WEBTEKNOLOJİLERİPROJE/boztepe.html
+++ b/WEBTEKNOLOJİLERİPROJE/boztepe.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>Boztepe | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
 
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
