--- a/WEBTEKNOLOJİLERİPROJE/iletisim.html
+++ b/WEBTEKNOLOJİLERİPROJE/iletisim.html
@@ -2,18 +2,19 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-
     <!-- Responsive -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-	
-	<!-- Css -->
-	<link rel="stylesheet" href="style.css">
-
-    <!-- Custom JavaScript -->
-    <script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!-- Css -->
+    <link rel="stylesheet" href="style.css">
+    <style>
+        .error-message {
+            color: black;
+        }
+    </style>
+     <!-- Custom JavaScript -->
+     <script>
         function toggleMenu() {
             var navbar = document.getElementById("navbarSupportedContent");
             if (navbar.classList.contains("show")) {
@@ -22,137 +23,112 @@
                 navbar.classList.add("show");
             }
         }
-
-        function control()
-		{
-			var x = document.forms["Form"]["name"].value;
-			if (x == "") 
-			{
-				alert("İsim boş bırakılamaz");
-				return false;
-			}
-			var y = document.forms["Form"]["email"].value;
-			if (y == "") 
-			{
-				alert("Mail Kısmı Boş bırakılamaz");
-				return false;
-			}
-			var forMail = /^[a-zA-Z0-9._-]+@([a-zA-Z0-9.-]+.)+([.])+[a-zA-Z0-9.-]{2,4}$/;
-			if (forMail.test(y) == false) 
-			{
-				alert("Geçersiz Mail Adresi!!!");
-				return false;
-			}
-		}	
     </script>
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>İletişim | Muhammed Kol</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-white ">
-    
+    <nav class="navbar navbar-expand-md fixed-top navbar-white">
         <div class="container">
-
-            <a href="index.html" class="navbar-brand text-white">
-                Muhammed Kol
-            </a>
+            <a href="index.html" class="navbar-brand text-white">Muhammed Kol</a>
             <button id="button" class="navbar-toggler" type="button" onclick="toggleMenu()">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
-				<ul class="navbar-nav ml-auto ">
-
-					<li class="nav-item">
-						<a href="index.html" class="nav-link text-white">
-	      				Ana Sayfa
-	      				</a></li>
-
-					<li class="nav-item">
-						<a href="hakkında.html" class="nav-link text-white">
-	      				Hakkında
-	      				</a></li>
-
-	      			<li class="nav-item">
-						<a href="ozgecmis.html" class="nav-link text-white">
-	      				Özgeçmiş
-	      				</a></li>	
-
-					<li class="nav-item">
-						<a href="sehrim.html" class="nav-link text-white">
-	      				Şehrim
-	      				</a></li>
-
-	      			<li class="nav-item">
-						<a href="takımımız.html" class="nav-link text-white">
-	      				Takımımız
-	      				</a></li>
-
-	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
-                        Login
-	      				</a>
-                    </li>	
-                    
-                    <li class="nav-item active">
-						<a href="iletisim.html" class="nav-link text-white">
-                        İletişim
-	      				</a>
-                    </li>
-				</ul>
-			</div>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="index.html" class="nav-link text-white">Ana Sayfa</a></li>
+                    <li class="nav-item"><a href="hakkında.html" class="nav-link text-white">Hakkında</a></li>
+                    <li class="nav-item"><a href="ozgecmis.html" class="nav-link text-white">Özgeçmiş</a></li>
+                    <li class="nav-item"><a href="sehrim.html" class="nav-link text-white">Şehrim</a></li>
+                    <li class="nav-item"><a href="takımımız.html" class="nav-link text-white">Takımımız</a></li>
+                    <li class="nav-item"><a href="login.php" class="nav-link text-white">Login</a></li>
+                    <li class="nav-item active"><a href="iletisim.html" class="nav-link text-white">İletişim</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <header>
         <div class="bg-secondary text-light jumbotron">
             <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <br>
-                    <h1 class="display-4 font-weight-bold">
-                        İLETİŞİM
-                    </h1>
-                    <br>
+                <div class="row">
+                    <div class="col-12">
+                        <br>
+                        <h1 class="display-4 font-weight-bold">İLETİŞİM</h1>
+                        <br>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div id="app">
+                            <form @submit.prevent="validateForm">
+                                <div class="form-group">
+                                    <label for="name">İsminiz:</label>
+                                    <input type="text" v-model="name" class="form-control" placeholder="İsminizi Girin">
+                                    <small class="form-text error-message" v-if="errors.name">{{ errors.name }}</small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email adresiniz:</label>
+                                    <input type="email" v-model="email" class="form-control" placeholder="Emailinizi giriniz.">
+                                    <small class="form-text error-message" v-if="errors.email">{{ errors.email }}</small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Mesajınızı yazınız:</label>
+                                    <textarea v-model="message" id="message" rows="5" class="form-control" placeholder="Mesajınızı yazınız..."></textarea>
+                                </div>
+                                <button class="btn btn-dark" type="reset" @click="resetForm">Temizle</button>
+                                <button class="btn btn btn-dark" type="submit">Gönder</button>
+                                <br><br><br>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <form action="basarili.html" name="Form" onsubmit="return control()">
-                        <div class="form-group">
-                            <label for="name">İsminiz:</label>
-                            <input type="text" name="name" class="form-control" placeholder="İsminizi Girin">							
-                            <small class="form-text text-muted">Doldurulması zorunlu alan</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email adresiniz:</label>
-                            <input type="text" name="email" class="form-control" placeholder="Emailinizi giriniz.">
-                            <small class="form-text text-muted">Doldurulması zorunlu alan</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Mesajınızı yazınız:</label>
-                            <textarea name="message" id="message" rows="5" class="form-control" placeholder="Mesajınızı yazınız..."></textarea>
-                        </div>
-                        <button class="btn btn-dark" type="reset" id="submit" name="submit" value="Reset" onclick="check()">Temizle</button>
-                        <button class="btn btn btn-dark" type="submit" id="sub">Gönder</button>
-                        <br><br><br>
-                    </form>
-                </div>
-            </div>
-            </div>
         </div>
-
-
-
-
-
-
-        <div class="bg-secondary text-light jumbotron">
-        </div>
+        <div class="bg-secondary text-light jumbotron"></div>
     </header>
-
-<footer class="py-5 bg-secondary text-white text-center fixed-bottom">
+    <footer class="py-5 bg-secondary text-white text-center fixed-bottom">
         Web Teknolojileri Projesi © Muhammed Emin Kol 2024
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script>
+        new Vue({
+            el: '#app',
+            data: {
+                name: '',
+                email: '',
+                message: '',
+                errors: {}
+            },
+            methods: {
+                validateForm() {
+                    this.errors = {};
+                    if (!this.name) {
+                        this.errors.name = 'İsim boş bırakılamaz';
+                    }
+                    if (!this.email) {
+                        this.errors.email = 'Mail Kısmı Boş bırakılamaz';
+                    } else if (!this.validEmail(this.email)) {
+                        this.errors.email = 'Geçersiz Mail Adresi!!!';
+                    }
+                    if (!Object.keys(this.errors).length) {
+                        this.submitForm();
+                    }
+                },
+                validEmail(email) {
+                    var re = /^[a-zA-Z0-9._-]+@([a-zA-Z0-9.-]+.)+([.])+[a-zA-Z0-9.-]{2,4}$/;
+                    return re.test(email);
+                },
+                submitForm() {
+                    var queryString = `name=${encodeURIComponent(this.name)}&email=${encodeURIComponent(this.email)}&message=${encodeURIComponent(this.message)}`;
+                    window.location.href = `basarili.html?${queryString}`;
+                },
+                resetForm() {
+                    this.name = '';
+                    this.email = '';
+                    this.message = '';
+                    this.errors = {};
+                }
+            }
+        });
+    </script>
 </body>
 </html>
