--- a/WEBTEKNOLOJİLERİPROJE/index.html
+++ b/WEBTEKNOLOJİLERİPROJE/index.html
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
@@ -100,7 +100,7 @@
                     </p>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 my-3">
                         <img class="align-items-center rounded" src="yakısıklı.jpg" height="300" >
                     </div>
                 </div>
