--- a/WEBTEKNOLOJİLERİPROJE/takımımız.html
+++ b/WEBTEKNOLOJİLERİPROJE/takımımız.html
@@ -87,7 +87,7 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
