--- a/WEBTEKNOLOJİLERİPROJE/uzungöl.html
+++ b/WEBTEKNOLOJİLERİPROJE/uzungöl.html
@@ -26,7 +26,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takımımız | Muhammed Kol</title>
+    <title>Uzungöl | Muhammed Kol</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-white ">
@@ -68,13 +68,13 @@
 	      				</a></li>
 
 	      			<li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="login.php" class="nav-link text-white">
                         Login
 	      				</a>
                     </li>	
                     
                     <li class="nav-item">
-						<a href="#" class="nav-link text-white">
+						<a href="iletisim.html" class="nav-link text-white">
                         İletişim
 	      				</a>
                     </li>
@@ -95,9 +95,14 @@
                     <img class="rounded mx-auto d-block" src="uzungöl.jpg" width=100%>
                     <br>
                     <p><i>
-                        Trabzon fotoğraflarını süsleyen doğa harikası Uzungöl etrafı dağlarla çevrili yeşillikler içerisinde harika bir yer.
-                        Burada konaklama yapabileceğiniz çok sayıda pansiyon var.
-                    </i></p>
+                        Gökyüzünün mavisi, bembeyaz bulutlar ve yemyeşil ormandan oluşan bir manzara karşılar sizi Uzungöl ’de…
+                        <br><br>
+                        Uzungöl’ün berrak sularının karadeniz’e akışı gibi gökyüzünü içinize çekersiniz her nefeste. Trabzon’a 99 km ve Çaykara ilçesine 19 km uzaklıkta, deniz seviyesinden 1090 m yükseklikte bulunan Uzungöl, Şerah köyünün yerleştiği vadi yamaçlarından heyelan sonucu kayan toprak ve kayaların, haldizen deresinin önünü kapatmasıyla 1600’lü yıllarda oluştuğu rivayet olunan doğal bir göldür. Çevresinde oluşmuş olan yerleşim alanı da adını “Uzungöl” den alır.
+                        <br><br>
+                        Yerli ve yabancı turistlerin büyük ilgisini çeken Uzungöl’ün, turistik potansiyeli çok yüksektir. Göl ve Trabzon’un en yüksek Haldizen vadisi doğa yürüyüşü, kuş gözlemciliği, botanik amaçlı turların yanı sıra, daha yükseklerdeki dağların arasındaki göllere veya yakınlardaki Şeker su, Demirkapı, Yayla önü gibi doğal güzelliği yanında geleneksel Karadeniz mimarisinin özgün ahşap köy evlerinin gezilebileceği yaylalara geziler düzenleme olanağı vardır.
+                        <br><br>
+                        Haldizen Dağı 3.325 metre. Haldizen vadisinde, heyelan sonucu dere yatağının tabii baraj şeklinde kapanması sonucu oluşan göl, çevresindeki dik yamaçları ve yamaçları kaplayan ladin ormanları ile çekici bir peyzaj sergiler. Uzungöl su seviyesi bakımından mevsimsel olarak çok az farklılık gösterir. 1090 m yükseklikteki gölün yaklaşık olarak boyu 1000 metre, eni 500 metre ve derinliği ise 15 metre civarındadır. Gölde doğal alabalık yaşamaktadır.
+                    </i></p><br>
                 </div>
             </div>
             <div class="col-md text-center">
